# nogasm-rs

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Readme.md  build.rs  cbindgen.toml  platformio.ini  sdkconfig.esp32dev
.cargo/: config.toml
include/: ble.h  cbindgen_fixes.h
src/: avg.rs  ble.c  ble.cpp.bak  ble.rs  ble2.cpp.bak  display.rs  h710.rs  history.rs  lib.rs  main.c  menu.rs  state.rs  switch.rs
