[package]
name = "nogasm-rs"
version = "0.0.1"
authors = ["Tomatenfisch <tomatenfisch@posteo.de>"]
edition = "2021"
license = "GPL-3.0"

[lib]
name = "nogasm_rs"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[dependencies]
hal = { package = "esp32-hal", version = "0.14.0" }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32", "log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
embedded-hal = "0.2.7"
embedded-graphics = "0.8.1"
ssd1306 = { version = "0.8.0", features = ["graphics"] }
display-interface = "0.4.1"
cty = "0.2.2"
rotary-encoder-embedded = "0.2.0"
critical-section = "1.1.2"
panic-halt = "0.2.0"
heapless = "0.7.16"

[dependencies.num]
version = "0.4.1"
default-features = false

[build-dependencies]
cbindgen = "0.24.5"
